# rp2040-interpolator

./: .gitignore  CMakeLists.txt  README.md
c/: CMakeLists.txt  interp.c  interp.h  interp_ctrl.h
c/include/: interp.h  interp_ctrl.h
c/src/: interp.c
cmake/: fix_clangd_includes.cmake
cpp/: CMakeLists.txt
cpp/include/: interp-hw.hpp  interp-state.hpp  interp-sw-c.hpp  interp-sw.hpp  interp.hpp
include/: interp-impl.hpp  interp-state.hpp  interp-sw.hpp  interp-util.h  interp.h
python/: .gitignore  README.md  pyproject.toml  setup.py
python/rp2040_interp/: __init__.py  hardware.py  interp.py
tests/: CMakeLists.txt
tests/cmake/: find_sdk.cmake
tests/host-test/: CMakeLists.txt  main.cpp
tests/host-test-sw/: CMakeLists.txt
tests/lib/include/: interp-test.h  interp-test.hpp
tests/lib/src/: parser.cpp  tester.cpp
tests/pico-auto-test/: CMakeLists.txt  main.cpp
tests/pico-gen-hw/: CMakeLists.txt
tests/pico-test/: CMakeLists.txt  main.cpp
tests/pico-test-hw/: CMakeLists.txt
tests/pico-test-sw/: CMakeLists.txt
